--- a/srcs/requirements/mariadb/dockerfile
+++ b/srcs/requirements/mariadb/dockerfile
@@ -7,7 +7,20 @@ ARG WORDPRESS_DB_HOST
 
 RUN apt-get update && apt-get install -y mariadb-server
 
-RUN service mysql start && mysql -u root -e "CREATE DATABASE ${WORDPRESS_DB_HOST}; 
-											CREATE USER '${MYSQL_USER}'@'localhost' IDENTIFIED BY 'password';
-											GRANT ALL PRIVILEGES ON *.* TO 'newuser'@'localhost' WITH GRANT OPTION;
-											FLUSH PRIVILEGES;"
+RUN mkdir -p /docker-entrypoint-initdb.d
+
+RUN mkdir -p /var/run/mysqld/
+RUN chown -R mysql:mysql /var/run/mysqld/
+RUN mkdir -p /etc/mysql
+COPY ./config/my.cnf /etc/mysql/my.cnf
+
+# Escribir el script de inicialización SQL directamente en el Dockerfile
+RUN service mariadb start && \
+    echo "CREATE DATABASE IF NOT EXISTS ${WORDPRESS_DB_HOST} ;" > msql_db.sql && \
+    echo "CREATE USER IF NOT EXISTS '${MYSQL_USER}'@'%' IDENTIFIED BY '${MYSQL_PASSWORD}' ;" >> msql_db.sql && \
+    echo "GRANT ALL PRIVILEGES ON ${WORDPRESS_DB_HOST}.* TO '${MYSQL_USER}'@'%' ;" >> msql_db.sql && \
+    echo "FLUSH PRIVILEGES;" >> msql_db.sql && \
+    echo "ALTER USER 'root'@'localhost' IDENTIFIED BY '${MYSQL_ROOT_PASSWORD}' ;" >> msql_db.sql && \
+    mariadb < msql_db.sql
+
+CMD ["mysqld"]
