--- a/srcs/requirements/nginx/config/nginx.conf
+++ b/srcs/requirements/nginx/config/nginx.conf
@@ -1,6 +1,9 @@
 server {
-    listen 443;
+    listen 443 ssl;
+	ssl_certificate /etc/nginx/ssl/nginx.crt;
+	ssl_certificate_key /etc/nginx/ssl/nginx.key;
     server_name prando-a.42.fr;
+	ssl_protocols TLSv1.2 TLSv1.3;
 
     root /var/www/html;
     index index.php index.html index.htm;
@@ -10,10 +13,11 @@ server {
     }
 
     location ~ \.php$ {
-        include snippets/fastcgi-php.conf;
-        fastcgi_pass unix:/var/run/php/php7.4-fpm.sock;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include fastcgi_params;
+        fastcgi_pass wordpress_container:9000;
+        fastcgi_index index.php;
+		include fastcgi_params;
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
     location ~ /\.ht {
