--- a/srcs/requirements/wordpress/dockerfile
+++ b/srcs/requirements/wordpress/dockerfile
@@ -1,12 +1,13 @@
 # Usa Ubuntu como imagen base
-FROM ubuntu:latest
+FROM debian:bullseye
 
 # Actualiza el sistema e instala dependencias necesarias
 RUN apt-get update && apt-get install -y \
-    nginx \
-    php-fpm \
-    php-mysql \
-    mysql-client \
+	php7.4-fpm \
+	php7.4-mysql \
+	php7.4-curl \
+	php7.4-gd \
+	php7.4-mbstring \
     curl \
     unzip \
     sudo \
@@ -17,11 +18,10 @@ RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli
     && chmod +x wp-cli.phar \
     && mv wp-cli.phar /usr/local/bin/wp
 
-# Configura Nginx
-COPY nginx.conf /etc/nginx/nginx.conf
-
 # Configura PHP
-COPY php.ini /etc/php/7.4/fpm/php.ini
+COPY config/php-fpm.conf /etc/php/7.4/fpm/php-fpm.conf
+
+RUN mkdir -p /var/www/html
 
 # Descarga e instala WordPress
 RUN curl -O https://wordpress.org/latest.zip \
@@ -38,5 +38,7 @@ RUN chmod +x /setup-wp.sh
 # Expone el puerto 80
 EXPOSE 80
 
+RUN useradd prando-a && groupadd wp_group && usermod -aG wp_group prando-a
+
 # Inicia Nginx y PHP-FPM
-CMD service php7.4-fpm start && nginx -g 'daemon off;' & /setup-wp.sh
+CMD /setup-wp.sh
