--- a/srcs/.env
+++ b/srcs/.env
@@ -7,7 +7,7 @@ MYSQL_USER=user42
 MYSQL_PASSWORD=pepemaricaxdxd123
 
 WORDPRESS_DB_NAME=wordpress
-WORDPRESS_DB_HOST=mariadb
+WORDPRESS_DB_HOST=mariadb:3306
 WORDPRESS_DB_USER=root
 WORDPRESS_DB_PASSWORD=patata123
 WP_TITLE=Inception
