--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -13,15 +13,16 @@ services:
       - wordpress
     container_name: nginx_container
     restart: unless-stopped
+  
   mariadb:
     build:
       context: ./requirements/mariadb
       dockerfile: Dockerfile
-      args:
-         MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-         MYSQL_USER: ${MYSQL_USER}
-         MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-         WORDPRESS_DB_HOST: ${WORDPRESS_DB_HOST}
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      WORDPRESS_DB_HOST: ${WORDPRESS_DB_HOST}
     volumes:
       - mariadb_data:/var/lib/mysql
     networks:
@@ -30,6 +31,7 @@ services:
       - "3306"
     container_name: mariadb_container
     restart: unless-stopped
+  
   wordpress:
     build:
       context: ./requirements/wordpress
@@ -62,3 +64,4 @@ volumes:
       type: none
       device: ~/data/mariadb
       o: bind
+
