--- a/srcs/.env
+++ b/srcs/.env
@@ -1,16 +1,16 @@
 #EJEMPLO DE COMO SE DEBE DE VER EL ARCHIVO .env
 
 DOMAIN_NAME=prando-a.42.fr
-# MYSQL SETUP
-MYSQL_ROOT_PASSWORD=pepemaricaxdxd1234
-MYSQL_USER=user42
-MYSQL_PASSWORD=pepemaricaxdxd123
+# DB SETUP
+DB_USER=prando-a
+DB_PASS=duracomomiverdura
+DB_ROOT_PASS=duracomomiverdura
 
-WORDPRESS_DB_NAME=wordpress
-WORDPRESS_DB_HOST=mariadb:3306
-WORDPRESS_DB_USER=root
-WORDPRESS_DB_PASSWORD=patata123
+WP_DB_NAME=wordpress
+WP_DB_HOST=mariadb:3306
+WP_DB_USER=root
+WP_DB_PASS=patata123
 WP_TITLE=Inception
 WP_ADMIN=prando-a
-WP_ADMIN_PASSWORD=pepemaricaxdxd123
+WP_ADMIN_PASS=duracomomiverdura
 WP_ADMIN_MAIL=prando-a@student.42malaga.com
