--- a/srcs/.env
+++ b/srcs/.env
@@ -2,13 +2,13 @@
 
 DOMAIN_NAME=prando-a.42.fr
 # DB SETUP
+DB_NAME=mariadb
 DB_USER=prando-a
 DB_PASS=duracomomiverdura
 DB_ROOT_PASS=duracomomiverdura
 
-WP_DB_NAME=wordpress
 WP_DB_HOST=mariadb:3306
-WP_DB_USER=root
+WP_DB_USER=XD
 WP_DB_PASS=patata123
 WP_TITLE=Inception
 WP_ADMIN=prando-a
