--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -24,13 +24,13 @@ COPY config/php-fpm.conf /etc/php/7.4/fpm/php-fpm.conf
 RUN mkdir -p /var/www/html
 
 # Descarga e instala WordPress
-RUN curl -O https://wordpress.org/latest.zip \
-    && unzip latest.zip -d /var/www/html \
-    && rm latest.zip \
-    && chown -R www-data:www-data /var/www/html/wordpress \
-    && mv /var/www/html/wordpress/* /var/www/html/ \
-    && rmdir /var/www/html/wordpress \
-    && wp config create --path=var/www/html --dbname=$WP_DB_NAME --dbuser=$WP_DB_USER --dbpass=$WP_DB_PASSWORD --dbhost=$WP_DB_HOST  --allow-root
+RUN curl -O https://wordpress.org/latest.zip
+RUN unzip latest.zip -d /var/www/html
+RUN rm latest.zip
+RUN chown -R www-data:www-data /var/www/html/wordpress
+RUN mv /var/www/html/wordpress/* /var/www/html/
+RUN rmdir /var/www/html/wordpress
+RUN wp config create --path=var/www/html --dbname=$WP_DB_NAME --dbuser=$WP_DB_USER --dbpass=$WP_DB_PASSWORD --dbhost=$WP_DB_HOST  --allow-root
 
 # Copia el script de configuración
 COPY ./config/setup-wp.sh /setup-wp.sh
