--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -18,11 +18,11 @@ services:
     build:
       context: ./requirements/mariadb
       dockerfile: Dockerfile
-    environment:
-      DB_NAME: ${DB_NAME}
-      DB_ROOT_PASS: ${DB_ROOT_PASS}
-      DB_USER: ${DB_USER}
-      DB_PASS: ${DB_PASS}
+      args:
+        DB_NAME: ${DB_NAME}
+        DB_ROOT_PASS: ${DB_ROOT_PASS}
+        DB_USER: ${DB_USER}
+        DB_PASS: ${DB_PASS}
     volumes:
       - mariadb_data:/var/lib/mysql
     networks:
