--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -20,7 +20,7 @@ COPY ./config/my.cnf /etc/mysql/my.cnf
 
 # Inicializar la base de datos
 RUN service mariadb start && \
-    echo "CREATE DATABASE IF NOT EXISTS '${DB_NAME}' ;" > msql_db.sql && \
+    echo "CREATE DATABASE IF NOT EXISTS ${DB_NAME} ;" > msql_db.sql && \
     echo "CREATE USER IF NOT EXISTS '${DB_USER}'@'%' IDENTIFIED BY '${DB_PASS}' ;" >> msql_db.sql && \
     echo "GRANT ALL PRIVILEGES ON ${DB_NAME}.* TO '${DB_USER}'@'%' ;" >> msql_db.sql && \
     echo "FLUSH PRIVILEGES;" >> msql_db.sql && \
