--- a/srcs/.env
+++ b/srcs/.env
@@ -8,7 +8,7 @@ DB_PASS=duracomomiverdura
 DB_ROOT_PASS=duracomomiverdura
 
 WP_DB_HOST=mariadb:3306
-WP_DB_USER=XD
+WP_DB_USER=prando-a
 WP_DB_PASS=patata123
 WP_TITLE=Inception
 WP_ADMIN=prando-a
