--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -36,6 +36,12 @@ services:
     build:
       context: ./requirements/wordpress
       dockerfile: Dockerfile
+      args:
+        WP_DB_HOST: ${WP_DB_HOST}
+        DB_NAME: ${DB_NAME}
+        WP_DB_USER: ${WP_DB_USER}
+        DB_PASS: ${DB_PASS}
+        DOMAIN_NAME: ${DOMAIN_NAME}
     environment:
       WP_DB_HOST: ${WP_DB_HOST}
       WP_DB_NAME: ${DB_NAME}
