--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -42,12 +42,8 @@ services:
         WP_DB_USER: ${WP_DB_USER}
         DB_PASS: ${DB_PASS}
         DOMAIN_NAME: ${DOMAIN_NAME}
-    environment:
-      WP_DB_HOST: ${WP_DB_HOST}
-      WP_DB_NAME: ${DB_NAME}
-      WP_DB_USER: ${WP_DB_USER}
-      WP_DB_PASSWORD: ${DB_PASS}
-      DOMAIN_NAME: ${DOMAIN_NAME}
+    env_file:
+      - .env
     expose:
       - "9000"
     volumes:
