--- a/srcs/.env
+++ b/srcs/.env
@@ -7,7 +7,7 @@ DB_USER=prando-a
 DB_PASS=duracomomiverdura
 DB_ROOT_PASS=duracomomiverdura
 
-WP_DB_HOST=mariadb_container
+WP_DB_HOST=mariadb:3306
 WP_DB_USER=prando-a
 WP_DB_PASS=patata123
 WP_TITLE=Inception
