--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -29,6 +29,8 @@ services:
       - inception
     expose:
       - "3306"
+    ports:
+      - "3306:3306"
     container_name: mariadb_container
     restart: unless-stopped
   
