--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -12,6 +12,8 @@ RUN tar -xzf /tmp/wordpress.tar.gz -C /var/www/html
 
 COPY /config/setup-wp.sh .
 
+RUN chmod +x /setup-wp.sh
+
 EXPOSE 9000
 
 # Inicia PHP-FPM
