--- a/srcs/requirements/mariadb/config/my.cnf
+++ b/srcs/requirements/mariadb/config/my.cnf
@@ -3,7 +3,7 @@
 user = mysql
 pid-file = /run/mysqld/mysqld.pid
 port = 3306
-socket = /var/run/mysqld/mysqld.sock
+socket = /run/mysqld/mysqld.sock
 bind-address = 0.0.0.0
 basedir = /usr
 datadir = /var/lib/mysql
