--- a/srcs/requirements/mariadb/.env
+++ b/srcs/requirements/mariadb/.env
@@ -1,16 +1,18 @@
-#EJEMPLO DE COMO SE DEBE DE VER EL ARCHIVO .env
-
 DOMAIN_NAME=prando-a.42.fr
-# DB SETUP
+
+
 DB_NAME=mariadb
 DB_USER=prando-a
 DB_PASS=duracomomiverdura
 DB_ROOT_PASS=duracomomiverdura
 
+
 WP_DB_HOST=mariadb:3306
-WP_DB_USER=XD
-WP_DB_PASS=patata123
+
+
 WP_TITLE=Inception
+WP_USER=XD
+WP_PASS=patata123
 WP_ADMIN=prando-a
 WP_ADMIN_PASS=duracomomiverdura
 WP_ADMIN_MAIL=prando-a@student.42malaga.com
