--- a/srcs/.env
+++ b/srcs/.env
@@ -7,7 +7,7 @@ DB_PASS=duracomomiverdura
 DB_ROOT_PASS=duracomomiverdura
 
 
-WP_DB_HOST=mariadb:3306
+WP_DB_HOST=ariadb:3306
 
 
 WP_TITLE=Inception
