--- a/srcs/.env
+++ b/srcs/.env
@@ -1,13 +1,13 @@
 DOMAIN_NAME=prando-a.42.fr
 
 
-DB_NAME=mariadb
+DB_NAME=mariadbz
 DB_USER=prando-a
 DB_PASS=duracomomiverdura
 DB_ROOT_PASS=duracomomiverdura
 
 
-WP_DB_HOST=ariadb:3306
+WP_DB_HOST=mariadb:3306
 
 
 WP_TITLE=Inception
