--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -15,7 +15,7 @@ RUN apt-get -y install wget tar
 RUN wget -O /tmp/wordpress.tar.gz https://wordpress.org/latest.tar.gz
 RUN tar -xzf /tmp/wordpress.tar.gz -C /var/www/html
 
-COPY /config/setup-wp.sh .
+COPY /tools/setup-wp.sh .
 
 RUN chmod +x setup-wp.sh
 
