--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -20,19 +20,9 @@ EXPOSE 3306
 # Copiar configuración personalizada de MariaDB
 COPY ./config/my.cnf /etc/mysql/maria.conf.d
 
-# Inicializar la base de datos
-RUN service mariadb start && \
-    echo "CREATE DATABASE IF NOT EXISTS mariadbs ;" > msql_db.sql && \
-    echo "CREATE USER IF NOT EXISTS '${DB_USER}'@'%' IDENTIFIED BY '${DB_PASS}' ;" >> msql_db.sql && \
-    echo "GRANT ALL PRIVILEGES ON ${DB_NAME}.* TO '${DB_USER}'@'%' ;" >> msql_db.sql && \
-    echo "FLUSH PRIVILEGES;" >> msql_db.sql && \
-    echo "ALTER USER 'root'@'localhost' IDENTIFIED BY '${DB_ROOT_PASS}' ;" >> msql_db.sql && \
-    mariadb < msql_db.sql
+COPY ./tools/setup-db.sh .
 
-RUN chmod 777 msql_db.sql
-RUN mv msql_db.sql /run/mysqld/msql_db.sql
-RUN chown -R mysql:root /var/run/mysqld
+RUN chmod +x setup-db.sh
 
-
-CMD ["mariadbd", "--user=mysql", "--init-file=/run/mysqld/msql_db.sql"]
+CMD ["./setup-db.sh"]
 
