--- a/srcs/requirements/nginx/config/nginx.conf
+++ b/srcs/requirements/nginx/config/nginx.conf
@@ -9,7 +9,7 @@ server {
     index index.php index.html index.htm;
 
     location / {
-        try_files $uri $uri/ /index.php?$args;
+        index index.php;
     }
 
     location ~ \.php$ {
