--- a/srcs/.env
+++ b/srcs/.env
@@ -16,3 +16,4 @@ WP_PASS=patata123
 WP_ADMIN=prando-a
 WP_ADMIN_PASS=duracomomiverdura
 WP_ADMIN_MAIL=prando-a@student.42malaga.com
+WP_USER_MAIL=pepegei@hotmail.com
