--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -15,7 +15,7 @@ RUN useradd prando-a && groupadd wp_group && usermod -aG wp_group prando-a
 RUN mkdir -p /var/www/html && chown prando-a:wp_group /var/www/html
 
 COPY /tools/setup-wp.sh .
-
+COPY config/php-fpm.conf /etc/php/7.4/fpm/php-fpm.conf
 COPY /config/wp-config.php .
 
 RUN chmod +x setup-wp.sh
