--- a/srcs/requirements/wordpress/config/php-fpm.conf
+++ b/srcs/requirements/wordpress/config/php-fpm.conf
@@ -8,7 +8,7 @@ daemonize = no
 
 [www]
 listen = 0.0.0.0:9000
-user = prando-a
+user = wp_user
 group = wp_group
 pm = dynamic
 pm.max_children = 30
