--- a/srcs/.env
+++ b/srcs/.env
@@ -11,7 +11,7 @@ WP_DB_HOST=mariadb:3306
 
 
 WP_TITLE=Inception
-WP_USER=XD
+WP_USER=xDpotatoXXX
 WP_PASS=patata123
 WP_ADMIN=prando-a
 WP_ADMIN_PASS=duracomomiverdura
