--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,71 +1,55 @@
+version: '3'
+
 services:
   nginx:
-    build:
+    build: 
       context: ./requirements/nginx
       dockerfile: Dockerfile
-    expose:
-      - "443"
-    ports:
-      - "443:443"
+    container_name: nginx_inception
     volumes:
       - wordpress_data:/var/www/html
+    ports:
+      - "443:443"
     networks:
       - inception
     depends_on:
       - wordpress
-    container_name: nginx_container
     restart: unless-stopped
   
   mariadb:
     build:
-      context: ./requirements/mariadb
-      dockerfile: Dockerfile
       args:
         DB_NAME: ${DB_NAME}
         DB_ROOT_PASS: ${DB_ROOT_PASS}
         DB_USER: ${DB_USER}
         DB_PASS: ${DB_PASS}
-    environment:
-      - DB_ROOT_PASS=${DB_ROOT_PASS}
-      - DB_NAME=${DB_NAME}
-      - DB_USER=${DB_USER}
-      - DB_PASS=${DB_PASS}
+      context: ./requirements/mariadb
+      dockerfile: Dockerfile
+    container_name: mariadb_inception
     volumes:
       - mariadb_data:/var/lib/mysql
     networks:
       - inception
-    expose:
-      - "3306"
-    container_name: mariadb_container
+    env_file:
+      - .env
+    ports:
+      - "3306:3306"
     restart: unless-stopped
   
   wordpress:
-    build:
+    build: 
       context: ./requirements/wordpress
       dockerfile: Dockerfile
-      args:
-        WP_DB_HOST: ${WP_DB_HOST}
-        DB_NAME: ${DB_NAME}
-        DB_USER: ${DB_USER}
-        DB_ROOT_PASS: ${DB_ROOT_PASS}
-        DB_PASS: ${DB_PASS}
-        DOMAIN_NAME: ${DOMAIN_NAME}
-    env_file:
-      - .env
-    expose:
-      - "9000"
+    container_name: wordpress_inception
     volumes:
       - wordpress_data:/var/www/html
     depends_on:
       - mariadb
     networks:
       - inception
-    container_name: wordpress_container
+    env_file:
+      - .env
     restart: unless-stopped
-
-networks:
-  inception:
-    driver: bridge
 
 volumes:
   wordpress_data:
@@ -81,3 +65,6 @@ volumes:
       device: ~/data/mariadb
       o: bind
 
+networks:
+  inception:
+    driver: bridge
