--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -17,9 +17,9 @@ RUN mkdir -p /var/www/html && chown wp_user:wp_group /var/www/html
 
 RUN mkdir /scripts
 
-COPY /tools/setup-wp.sh /scripts/setup-wp.sh
+COPY tools/setup-wp.sh /scripts/setup-wp.sh
 COPY config/php-fpm.conf /etc/php/7.4/fpm/php-fpm.conf
-COPY /config/wp-config.php /scripts/wp-config.php
+COPY config/wp-config.php /scripts/wp-config.php
 
 RUN chmod +x setup-wp.sh
 
